--- a/client/src/index.css
+++ b/client/src/index.css
@@ -55,6 +55,25 @@ button:focus-visible {
   outline: 4px auto -webkit-focus-ring-color;
 }
 
+/* LOGIN PAGE */
+
+.Login-form {
+  display: flex;
+  flex-direction: column;
+  justify-content: space-evenly;
+  width: 50vh;
+}
+
+.Login {
+  border: 4px solid;
+}
+
+.button {
+  width: 50%;
+  align-items: center;
+  margin-left: 120px;
+}
+
 /* NAVBAR*/
 .Nav {
   display: flex;
